<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Cash-Game Manager</string>
    <string name="text_lancamentos">Balanços</string>
    <string name="txt_lancar">Salvar</string>
    <string name="text_valores_lancados">Valores salvos.</string>
    <string name="text_lancar">Salvar balanço</string>
    <string name="msg_data_ini_menor">Data inicial não pode ser menor do que data final</string>
    <string name="msg_todos_campos_nao_preenchidos">Todos campos devem ser preenchidos.</string>
    <string name="msg_data_ini_before_last_fim">Data inicial deve ser maior do que data final do último torneio.
    </string>
    <string name="text_spinner_adapter">"º torneio "</string>
    <string name="msg_sel_round_para_entrar">Selecione ou crie um novo torneio para entrar.</string>
    <string name="text_first_tourn">" º Torneio"</string>
    <string name="msg_valores_nao_preenchidos">Todos campos devem ser preenchidos.</string>
    <string name="msg_data_fora_periodo">Data inválida, verifique o periodo do torneio.</string>
    <string name="date_format">dd/MM/yyyy</string>
    <string name="titulo_inicial">Selecione:</string>
    <string name="msg_create_new_round">CRIE UM TORNEIO \nPARA\n ENTRAR</string>
    <string name="text_create_round">Criação: novo torneio</string>
    <string name="text_initial_date">Data inicial:</string>
    <string name="text_end_date">Data final:</string>
    <string name="text_enrollment">Inscrição (R$):</string>
    <string name="text_save_new_round">Salvar</string>
    <string name="text_select_existing_one">Selecione</string>
    <string name="text_tournament_period">Período do torneio</string>
    <string name="user_already_in_db">Nome já cadastrado, por favor escolha outro.</string>
    <string name="msg_user_saved">Usuário inserido com sucesso.</string>
    <string name="title">Cash-Game Manager</string>
    <string name="title_new_round">TWR: novo torneio</string>
    <string name="msg_user_empty">Nome não pode ser vazio.</string>
    <string name="text_pick_to_participate">"Selecione os participantes: "</string>
    <string name="text_finished">Concluir</string>
    <string name="msg_at_least_two">Ao menos dois jogadores devem ser cadastrados para criar torneio.</string>
    <string name="text_pos_char">" º"</string>
    <string name="text_atencao">Atenção</string>
    <string name="text_in">Entrada</string>
    <string name="text_out">Saída</string>
    <string name="title_app">Cash-Game Manager</string>
    <string name="text_balance_day">"Balanço do dia "</string>
    <string name="initial_value_in">R$ 2,00</string>
    <string name="text_insert_value">Inserir valor</string>
    <string name="create_new_user">Criar novo usuário</string>
    <string name="text_period">Geral</string>
    <string name="text_ranl">Rank</string>
    <string name="text_status">Status:</string>
    <string name="text_sign_in">Entrar</string>
    <string name="text_or">ou</string>
    <string name="text_include_round">Incluir novo torneio</string>
    <string name="text_include_user">Incluir novo usuário</string>
    <string name="text_user_name">Nome:</string>
    <string name="text_save_user">Salvar novo usuário</string>
    <string name="title_in_value">Valor de entrada</string>
    <string name="title_out_value">Valor de saída</string>
    <string name="text_total_of">"Total de: "</string>
    <string name="text_click_visualize">Clique para visualizar</string>
    <string name="text_participants">Participantes</string>
    <string name="text_members">Participantes: 0</string>
    <string name="text_round_winnings">Premiação</string>
    <string name="text_first_place_number">1º lugar:</string>
    <string name="text_second_place_number">2º lugar:</string>
    <string name="text_status_ok">VALORES LANÇADOS</string>
    <string name="text_status_pendente">A LANÇAR</string>
    <string name="msg_salvo_sucesso">Valores salvos com sucesso.</string>
    <string name="text_importar_informacoes">Deseja importar informações?</string>
    <string name="text_inf_balanco">º torneio, data:</string>
    <string name="text_exportar">Exportação</string>
    <string name="text_msg_exportar">Deseja exportar este torneio?</string>
    <string name="title_period">Ranking geral dos participantes</string>
    <string name="simbol_position">" º"</string>
    <string name="msg_sair_app">Deseja sair do app?</string>
    <string name="msg_importacao_sucesso">Importado com sucesso.</string>
    <string name="msg_importacao_falha">Não foi possível importar aquivo, favor importar arquivo .zip de drive local.
    </string>
    <string name="msg_arquivo_invalido">Arquivo inválido.</string>
    <string name="text_exportar_para">"Exportado para: "</string>
    <string name="text_exportar_arquivo">Deseja enviar aquivo exportado?</string>
</resources>
